[project]
name = "health_assertion"
version = "0.1.0"
description = "SONiC network health assertion toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Network Automation"}]
dependencies = [
    "paramiko>=3.4",
    "PyYAML>=6.0",
    "requests>=2.32",
    "tenacity>=8.2",
]

[project.scripts]
health-assertion = "health_assertion.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
